update composer project name and description

--- a/Function42/composer.json
+++ b/Function42/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "neighborhoods/prefab-examples-example1",
-  "description": "Example 1 usage of the prefab project.",
+  "name": "neighborhoods/prefab-fitness-function42",
+  "description": "Example of generating machinary for a User DAO.",
   "type": "project",
   "license": "proprietary",
   "keywords": [
