PREF-86 | Update UC composer.jsons to include bakery

--- a/UseCase42/composer.json
+++ b/UseCase42/composer.json
@@ -1,15 +1,29 @@
 {
   "name": "neighborhoods/prefab-fitness-UseCase42",
-  "description": "Example of generating machinary for a User DAO.",
+  "description": "Example of generating machinery for a User DAO.",
   "type": "project",
   "license": "proprietary",
   "keywords": [
     "prefab"
   ],
+  "scripts": {
+    "post-update-cmd": [
+      "vendor/bin/prefab",
+      "vendor/bin/bakery"
+    ],
+    "post-install-cmd": [
+      "vendor/bin/prefab",
+      "vendor/bin/bakery"
+    ]
+  },
   "repositories": [
     {
       "type": "vcs",
       "url": "git@github.com:neighborhoods/prefab.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:neighborhoods/Bakery.git"
     }
   ],
   "config": {
@@ -17,7 +31,8 @@
   },
   "require": {
     "php": "^7.2",
-    "neighborhoods/prefab": "4.x-dev"
+    "neighborhoods/prefab": "4.x-dev",
+    "neighborhoods/bakery": "dev-master"
   },
   "autoload": {
     "psr-4": {
