Install pdo_pgsql Add script to configure prefab_fitness database Add listings table migration Add mock data seeder

--- a/UseCase51/composer.json
+++ b/UseCase51/composer.json
@@ -25,7 +25,9 @@
     "sort-packages": true
   },
   "require": {
-    "neighborhoods/prefab": "^5.0"
+    "fzaninotto/faker": "^1.8",
+    "neighborhoods/prefab": "^5.0",
+    "robmorgan/phinx": "^0.11.1"
   },
   "autoload": {
     "psr-4": {
