Revert back to installing xdebug

--- a/UseCase51/docker-compose.yml
+++ b/UseCase51/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       build:
         context: .
         args:
-        - INSTALL_XDEBUG=false
+        - INSTALL_XDEBUG=true
         - COMPOSER_INSTALL=false
       volumes_from:
       - applications
