change prebake to prefab

--- a/UseCase51/composer.json
+++ b/UseCase51/composer.json
@@ -12,7 +12,7 @@
     }
   ],
   "scripts": {
-    "prebake" : [
+    "prefab" : [
       "vendor/bin/prefab",
       "composer dump-autoload"
     ],
