Update cleanup script to delete from V1 instead of MV1

--- a/UseCase51/src/V1/Listing.prefab.definition.yml
+++ b/UseCase51/src/V1/Listing.prefab.definition.yml
@@ -1,6 +1,7 @@
 dao:
   name: Listing
   table_name: listings
+  identity_field: id
   http_route: /v1/listing/{searchCriteria:}
   http_verbs:
     - get
