Add address information back to listing actor

--- a/UseCase51/src/V1/Listing.prefab.definition.yml
+++ b/UseCase51/src/V1/Listing.prefab.definition.yml
@@ -9,28 +9,24 @@ dao:
     id:
       data_type: int
       record_key: id
+      nullable: false
       created_on_insert: true
     street_address:
       data_type: string
       record_key: street_address
-    bedrooms:
-      data_type: int
-      record_key: bedrooms
-    bathrooms:
-      data_type: int
-      record_key: bathrooms
-    list_price:
-      data_type: int
-      record_key: list_price
-    year_built:
-      data_type: int
-      record_key: year_built
-    sq_ft:
-      data_type: int
-      record_key: sq_ft
-    parking_spaces:
-      data_type: int
-      record_key: parking_spaces
+      nullable: false
+    city:
+      data_type: string
+      record_key: city
+      nullable: false
+    state:
+      data_type: string
+      record_key: state
+      nullable: false
+    postal_code:
+      data_type: string
+      record_key: postal_code
+      nullable: false
     latitude:
       data_type: float
       record_key: latitude
@@ -39,3 +35,27 @@ dao:
       data_type: float
       record_key: longitude
       nullable: true
+    bedrooms:
+      data_type: int
+      record_key: bedrooms
+      nullable: false
+    bathrooms:
+      data_type: int
+      record_key: bathrooms
+      nullable: false
+    list_price:
+      data_type: int
+      record_key: list_price
+      nullable: false
+    year_built:
+      data_type: int
+      record_key: year_built
+      nullable: false
+    sq_ft:
+      data_type: int
+      record_key: sq_ft
+      nullable: false
+    parking_spaces:
+      data_type: int
+      record_key: parking_spaces
+      nullable: false
