--- a/UseCase52/Dockerfile
+++ b/UseCase52/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get install -y libpq-dev \
 RUN ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/local/include/
 RUN docker-php-ext-configure gmp
 RUN docker-php-ext-install gmp
+RUN docker-php-ext-install sockets
 RUN pecl install -o -f redis \
     &&  rm -rf /tmp/pear \
     &&  docker-php-ext-enable redis
