--- a/UseCase81/composer.json
+++ b/UseCase81/composer.json
@@ -6,7 +6,10 @@
     "prefab"
   ],
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "platform": {
+      "php": "7.4"
+    }
   },
   "require": {
     "fzaninotto/faker": "^1.8",
