Using 8.x Prefab branch in UseCase81.

--- a/UseCase81/composer.json
+++ b/UseCase81/composer.json
@@ -13,7 +13,7 @@
   },
   "require": {
     "fzaninotto/faker": "^1.8",
-    "neighborhoods/prefab": "dev-feature/dicbc",
+    "neighborhoods/prefab": "8.x-dev",
     "robmorgan/phinx": "^0.11.1"
   },
   "autoload": {
