XDebug 2.x.x INI file options were still defined so using xdebug-3.x.x will prevent it from work

--- a/UseCase82/docker/xdebug.ini
+++ b/UseCase82/docker/xdebug.ini
@@ -7,6 +7,6 @@ xdebug.remote_autostart=On
 xdebug.remote_connect_back=Off
 xdebug.remote_mode=req
 xdebug.remote_port=9000
-xdebug.remote_host=dockerhost
+xdebug.remote_host=host.docker.internal
 ; This is for Linux. Comment out the previous line and uncomment the following if you are using Linux.
 ;xdebug.remote_host=172.17.0.1
