--- a/UseCase82/composer.json
+++ b/UseCase82/composer.json
@@ -13,7 +13,8 @@
   },
   "require": {
     "fzaninotto/faker": "^1.8",
-    "neighborhoods/prefab": "8.1.*",
+    "neighborhoods/prefab": "8.*",
+    "doctrine/dbal": "2.12.*",
     "robmorgan/phinx": "^0.11.1"
   },
   "scripts": {
@@ -43,6 +44,5 @@
       ]
     }
   },
-  "minimum-stability": "dev",
   "prefer-stable": true
 }
