--- a/UseCase81/docker-compose.yml
+++ b/UseCase81/docker-compose.yml
@@ -23,8 +23,6 @@ services:
         - COMPOSER_INSTALL=false
       volumes_from:
       - applications
-      expose:
-      - "9095"
       environment:
           SITE_ENVIRONMENT: Local
           DATABASE_ADAPTER: pgsql
@@ -35,10 +33,8 @@ services:
           DATABASE_PORT: 5432
           REDIS_HOST: redis
           REDIS_PORT: 6379
+          DEBUG_MODE: "true"
           PHP_IDE_CONFIG: serverName=prefab_fitness.neighborhoods.com
-      extra_hosts:
-      - "dockerhost:10.200.10.1"
-      dns: 10.200.10.1
 
 ### nginx Container #######################################
 
@@ -48,7 +44,7 @@ services:
         volumes_from:
             - applications
         volumes:
-            - ./logs/nginx/:/var/log/nginx
+            - ./docker/nginx/logs/:/var/log/nginx
             - ./docker/nginx/sites/:/etc/nginx/sites-available
             - ./docker/nginx/conf.d/:/etc/nginx/conf.d
             - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -57,9 +53,6 @@ services:
             - "443:443"
         links:
             - prefab_fitness
-        extra_hosts:
-            - "dockerhost:10.200.10.1"
-        dns: 10.200.10.1
 
 ### PostgreSQL PostGis Container ############################
 
@@ -84,16 +77,6 @@ services:
             - redis:/data
         ports:
             - "6379:6379"
-
-### DNS Setup ###############################################
-
-    dnsmasq:
-        build: ./docker/dnsmasq
-        ports:
-            - "53:53/udp"
-            - "53:53"
-        cap_add:
-            - NET_ADMIN
 
 ### Volumes Setup ###########################################
 
