--- a/UseCase81/docker/xdebug.ini
+++ b/UseCase81/docker/xdebug.ini
@@ -1,4 +1,4 @@
-; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
+; NOTE: The actual debug.so extension is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
 xdebug.cli_color=0
 xdebug.profiler_enable=0
 xdebug.idekey=PHPSTORM
@@ -7,6 +7,6 @@ xdebug.remote_autostart=On
 xdebug.remote_connect_back=Off
 xdebug.remote_mode=req
 xdebug.remote_port=9000
-xdebug.remote_host=dockerhost
+xdebug.remote_host=host.docker.internal
 ; This is for Linux. Comment out the previous line and uncomment the following if you are using Linux.
 ;xdebug.remote_host=172.17.0.1
