--- a/UseCase84/composer.json
+++ b/UseCase84/composer.json
@@ -13,7 +13,7 @@
   },
   "require": {
     "doctrine/dbal": "2.12.*",
-    "neighborhoods/prefab": "dev-php8",
+    "neighborhoods/prefab": "^8.8.2",
     "robmorgan/phinx": "^0.11.1"
   },
   "scripts": {
