--- a/UseCase72/composer.json
+++ b/UseCase72/composer.json
@@ -12,7 +12,7 @@
     }
   },
   "require": {
-    "neighborhoods/prefab": "dev-PREF-247-7x-default-record-key-to-name"
+    "neighborhoods/prefab": "^7.1.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
