PREF-314 | switch prefab deprecated to is_deprecated

--- a/UseCase71/src/V1/HasDeprecatedFields.prefab.definition.yml
+++ b/UseCase71/src/V1/HasDeprecatedFields.prefab.definition.yml
@@ -11,7 +11,7 @@ properties:
     data_type: bool
     record_key: deprecated_field
     nullable: true
-    deprecated: true
+    is_deprecated: true
     deprecated_message: 'in favor of replacement_field'
     replacement: 'replacement_field'
   replacement_field:
