--- a/UseCase71/src/V1/HasDeprecatedFields.prefab.definition.yml
+++ b/UseCase71/src/V1/HasDeprecatedFields.prefab.definition.yml
@@ -13,8 +13,25 @@ properties:
     nullable: true
     is_deprecated: true
     deprecated_message: 'in favor of replacement_field'
-    replacement: 'replacement_field'
+    replacement: replacement_field
   replacement_field:
     data_type: string
     record_key: deprecated_field
     nullable: true
+  deprecated_simply:
+    data_type: bool
+    record_key: deprecated_simply
+    nullable: true
+    is_deprecated: true
+  deprecated_without_replacement:
+    data_type: bool
+    record_key: deprecated_without_replacement
+    nullable: true
+    is_deprecated: true
+    deprecated_message: 'to prove this works'
+  deprecated_without_message:
+    data_type: bool
+    record_key: deprecated_without_reason
+    nullable: true
+    is_deprecated: true
+    replacement: id
