PREF-314 | lock to official prefab version

--- a/UseCase71/composer.json
+++ b/UseCase71/composer.json
@@ -12,7 +12,7 @@
     }
   },
   "require": {
-    "neighborhoods/prefab": "dev-PREF-314-7x-deprecated-flag"
+    "neighborhoods/prefab": "7.2.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
